# tuxmath

./: CMakeCache.txt  CMakeLists.txt  build_tuxmath.sh  options  verify_t4kcommon.sh
build_wsl/: CMakeCache.txt  cmake_install.cmake
build_wsl/data/: cmake_install.cmake
build_wsl/doc/: cmake_install.cmake
build_wsl/src/: cmake_install.cmake
build_wsl/t4kcommon/: cmake_install.cmake
cmake-modules/: FindSDL2.cmake  FindSDL2.cmake.bak  FindSDL2_image.cmake  FindSDL2_image.cmake.bak  FindSDL2_mixer.cmake  FindSDL2_mixer.cmake.bak  FindSDL2_ttf.cmake  FindSDL2_ttf.cmake.bak
data/: CMakeLists.txt
doc/: CMakeLists.txt
po/: CMakeLists.txt
src/: CMakeLists.txt  campaign.c  comets.c  comets.h  comets.patch  comets_internal.h  comets_positions.c  common.h  credits.h  factoroids.c  game.c  game.h  generate_lesson.c  gettext.h  globals.h  input.c  lan_defs.h  mathcards.c  mathcards.h  missing_defs.h  multiplayer.c  network.h  sdl_keymap.h  sprites.h  string_utils.h  text_render.c  titlescreen.c  titlescreen.h  tuxmath.h  validate.c
